--- a/public/css/master.css
+++ b/public/css/master.css
@@ -43,7 +43,6 @@ a.disabled {
         margin-top: 5px;
     }
     #main-footer {
-        margin-top: 20px;
         padding-top: 10px;
     }
 }
